# srs

./: .gitmodules  ACKNOWLEDGEMENTS  README.md  package-lock.json  package.json
decks/: Core2k6k.json
licenses/: dirs  rehype-stringify  remark-breaks  remark-denden-ruby  rs-fsrs  sqlite  svelte-routing  unified
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: cards.rs  main.rs  settings.rs
src/routes/: Deck.svelte  Decks.svelte  Index.svelte  Review.svelte  Settings.svelte
